@@ -1,0 +1,39 @@
+[
+    "ACPrime",
+    "AChard",
+    "Ascension",
+    "Asheron4Fun.com",
+    "Coldeve",
+    "DarkSide-PK",
+    "Dekarutide",
+    "Derptide",
+    "Doctide",
+    "Drunkenfell",
+    "Duskfall",
+    "Fathomless Refuge",
+    "Frostcull",
+    "FrostfACE",
+    "FunkyTEST",
+    "FunkyTown 2.0",
+    "FunkyTown PK",
+    "GDLE Test",
+    "Harvestbud",
+    "Hightide",
+    "Infinite Frosthaven",
+    "InfiniteLeaftide",
+    "Jellocull",
+    "Levistras",
+    "Modclaim",
+    "Morgentau",
+    "Morntide",
+    "Reefcull",
+    "Revolution",
+    "Seedsow",
+    "Shadowland",
+    "Snowreap",
+    "Soulclaim",
+    "Sundering",
+    "Thistlecrown",
+    "ValHeel",
+    "Wynterhaven"
+]
