@@ -5,9 +5,30 @@ session_start();
 include_once 'util.php';
 
 $groups = json_decode(file_get_contents('titles.json'));
-/*
+$numAvailableTitles = 0;
+foreach ($groups as $group) {
+    $numAvailableTitles += count($group->titles);
+}
+$serverOptions = json_decode(file_get_contents('servers.json'));
 
-*/
+$server = isset($_GET['server']) ? $_GET['server'] : null;;
+$player = isset($_GET['player']) ? trim($_GET['player']) : null;
+$charTitles = array();
+$numTitlesFound = 0;
+
+if ($server && $player) {
+    $treeStatsUrl = 'https://treestats.net/' . $server . '/' . str_replace(' ', '%20', $player);
+    $treeStatsContents = @file_get_contents($treeStatsUrl);
+    $treeStatsLines = explode("\n", $treeStatsContents);
+    foreach ($treeStatsLines as $index => $line) {
+        if (str_starts_with($line, "<span class='title_list_item'>") || str_starts_with($line, "<span class='current_title title_list_item'>")) {
+            if (preg_match("/\<a.*\>(.*?)\<\/a\>/", $treeStatsLines[$index +1], $matches)) {
+                $charTitles[html_entity_decode($matches[1])] = true;
+                $numTitlesFound++;
+            }
+        }
+    }
+}
 
 ?>
 
@@ -26,6 +47,33 @@ $groups = json_decode(file_get_contents('titles.json'));
 <body>
     
 <h1>Titles</h1>
+
+<center>
+<form method="GET">
+<select name="server">
+    <option value="">Server</option>
+<?php
+foreach ($serverOptions as $serverOption) {
+?>
+    <option<?php echo $serverOption == $server ? ' selected' : ''; ?>><?php echo $serverOption; ?></option>
+<?php
+}
+?>
+</select>
+<input type="text" name="player" value="<?php echo $player; ?>" size="20" placeholder="Character Name" />
+<input type="submit" value="Treestats Lookup" />
+<?php
+if ($player && $server) {
+    if ($numTitlesFound > 0) {
+        echo "${numTitlesFound} of ${numAvailableTitles} titles acquired\n";
+    } else {
+        echo "Player not found\n";
+    }
+}
+?>
+</form>
+</center>
+
 <?php
 foreach ($groups as $name => $obj) {
 ?>
@@ -33,10 +81,11 @@ foreach ($groups as $name => $obj) {
 <table class="horizontal-table lookup-table" align="center">
 <thead>
     <tr>
+        <?php if ($player && $server) { ?><th>Acquired</th><?php } ?>
         <th>Title</th>
         <th>Quest</th>
         <th>Required Level</th>
-        <th>Recommended Level</th>
+        <th>Rec. Level</th>
         <th>XP</th>
         <th>Type</th>
         <th>Notes</th>
@@ -50,6 +99,8 @@ foreach ($groups as $name => $obj) {
         $htmlTitle = str_replace(' ', '_', $titleObj->title);
         $htmlQuest = str_replace(' ', '_', $titleObj->quest);
         
+        $titleMatch = str_replace(' (Title)', '', $titleObj->title);
+        
         $notes = array();
         if ($titleObj->status == 'Unverified') {
             $notes[] = "Unverified";
@@ -60,6 +111,15 @@ foreach ($groups as $name => $obj) {
 
 ?>
 <tr<?php echo $rowClass; ?>>
+<?php
+        if ($player && $server) {
+            echo "<td>\n";
+            if (isset($charTitles[$titleMatch])) {
+                echo 'YES';
+            }
+            echo "</td>\n";
+        }
+?>
     <td><a href="http://acportalstorm.com/wiki/<?php echo $htmlTitle; ?>" target="_new"><?php echo $titleObj->title; ?></a></td>
     <td><a href="http://acportalstorm.com/wiki/<?php echo $htmlQuest; ?>" target="_new"><?php echo $titleObj->quest; ?></a></td>
     <td><?php echo $titleObj->reqLevel; ?></td>
